fix layout bugs

--- a/assets/styles/components/_slider.scss
+++ b/assets/styles/components/_slider.scss
@@ -63,6 +63,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 9px;
 
     &:hover {
       cursor: pointer;
